<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="E_AxisState" Id="{36754522-37d1-4d47-9a9c-b3c259edeff8}">
    <Declaration><![CDATA[TYPE E_AxisState :
(
	eAxisState_Idle,
	eAxisState_Diag,
	eAxisState_Move,
	eAxisState_Reset
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>